crates/test-files/fixtures/compile_errors/call_create_with_wrong_type.fe
contract Bar:
    pass

contract Foo:

    pub fn foo():
        Bar.create(true)
